# zpad_labs

./: README.md
lab_02/: .gitignore  README.md  part1_vhi.ipynb  part2_power.ipynb  requirements.txt
lab_03/: .gitignore  README.md  lab_03.ipynb
lab_04/: README.md  task.py
lab_05/: .gitignore  README.md  task.py
lab_06/: CMakeLists.txt  README.md  build.sh  preinstall.sh  run.sh
lab_06/include/: Display.hpp  KeyProcessor.hpp
lab_06/src/: Display.cpp  FrameProcessor.cpp  KeyProcessor.cpp  main.cpp
lab_07/: CMakeLists.txt  README.md  build.sh  preinstall.sh  run.sh
lab_07/include/: CameraProvider.hpp  Display.hpp  FaceDetector.hpp  FrameProcessor.hpp  KeyProcessor.hpp
lab_07/src/: CameraProvider.cpp  FaceDetector.cpp  KeyProcessor.cpp  main.cpp
